--- a/lab2/blog.html
+++ b/lab2/blog.html
@@ -2,6 +2,8 @@
 <html>
   <head>
 
+    <link rel = "stylesheet" type = "text/css" href="styles/style.css">
+
     <meta charset = "UTF-8">
     <title>The Blog</title>
 
